fixed stars alignment and searchbar border

--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -36,7 +36,7 @@ align-items: center;
   height: 40px;
   width: 500px;
   border-radius: 10px;
-
+  margin-right: 1px;
   color: black;
 }
 .nav-searchbar button{
